kubernetes/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: healthcare-lbg-demo
  labels:
    name: healthcare-lbg-demo
    environment: dev
    project: healthcare-lbg-demo
    branch: dev
